--- a/experiments/tmdb/src/pages/Movie/css/Content.module.css
+++ b/experiments/tmdb/src/pages/Movie/css/Content.module.css
@@ -1,6 +1,6 @@
 .content {
   margin: 0 auto;
-  max-width: 64rem;
+  max-width: 66rem;
   padding: 1rem;
 }
 
